Added .jar file (forgot to do that earlier)