@@ -10,9 +10,22 @@ Project Outline:
 
 4. Plan & Level of Effort: Since I am the only person working on this project, I will obviously have to sink more time and effort into it than a team comprised of multiple people where the work can be split up. That being said, I plan on managing my time wisely and utilizing as much of what I have learned in class as I can to ensure that I can deliver a robust, working application. The first obstacle I want to tackle is the user interface using JavaFX, as that is what will probably take the most time to get working properly. Once I get the "skeleton" of the application in a stable state, I will get down to the smaller details of implementing the code of the game itself and polish the UI to the best of my abilities.
 
+# PROBLEM STATEMENT: 
+
+"How can I use my knowledge of JavaFX and GUI to make an event-driven solitaire game?”
+
+# HOW TO RUN THIS APPLICATION:
+
+Simply run the provided .jar file using the following launch arguments in the command prompt:
+"--module-path /PATH/ --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.swing,javafx.media,javafx.base,javafx.web"
+
+Additional instructions on how to play the game are included in the user manual.
+
 # RESOURCES USED FOR THIS PROJECT:
-1. Java solitaire program (code used to aid in building game aspect of this project, not GUI aspect): https://github.com/atjallen/solitaire.git
+1. Java solitaire program (code used to help set up classes for Card & Deck): https://github.com/atjallen/solitaire.git
 
-2. Card images: https://code.google.com/archive/p/vector-playing-cards/downloads
+2. Online card image for title screen: https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Playing_card_diamond_A.svg/1638px-Playing_card_diamond_A.svg.png 
 
-3. Tutorial video: https://www.wikihow.com/Video/Play-Solitaire
+3. Additional card images: https://code.google.com/archive/p/vector-playing-cards/downloads
+
+4. Tutorial video: https://www.wikihow.com/Video/Play-Solitaire
